# AgentMirror

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.cargo/: config.toml
.github/workflows/: windows-nsis.yml
config/: smr.example.yaml  test.env.example
crates/smr-cli/: Cargo.toml
crates/smr-core/: Cargo.toml
crates/smr-insight/: Cargo.toml
crates/smr-insight/src/: critic.rs  export.rs  extract.rs  graph.rs  infer.rs  lib.rs  llm.rs  locale.rs  metrics.rs  models.rs  parser.rs  pattern.rs  pipeline.rs  profile.rs  report.rs  rule_baseline.rs  safety.rs  separator.rs  spill.rs  store.rs  token_budget.rs  usage.rs  worker.rs
crates/smr-insight/tests/: openclaw_run_dedup.rs  pipeline_e2e.rs  research_e2e.rs  run_dedup.rs  store_ops.rs  v2_features.rs
docs/: AgentMirror-Design.md
gui/src-tauri/: Cargo.toml  create_icon.sh  (+3 more)
scripts/: blackbox_test.py  clean-vm.sh  clear-insight.sh  dist-layout.sh  generate_test_config.py  insight_mirror_test.py  insight_mock_server.py  install.ps1  install.sh  install_functional_test.py  load_test_env.sh  local_install_test.py  openclaw_security_matrix_test.py  openclaw_surveys_dlp_verify.py  package-all.sh  package-macos.sh  package-windows.sh  package.ps1  package.sh  publish-github-release.sh  release-full.sh  run_all_tests.ps1  run_all_tests.sh  run_full_tests.sh  run_insight_installed_test.sh  run_installed_app_tests.sh  run_transparency_client_live.sh  test-rerun-all-platforms.sh  test_common.py  transparency_client_live_test.py  transparency_pass_through_test.py  uninstall.ps1  uninstall.sh  verify.ps1  verify.sh
(+79 files in other folders)
